@@ -1,13 +1,13 @@
 package co.simplon.jamixbusiness.accounts;
 
-import co.simplon.jamixbusiness.commons.validations.CleanXSS;
+import co.simplon.jamixbusiness.commons.validations.NoXSS;
 import co.simplon.jamixbusiness.commons.validations.PasswordStrength;
 import jakarta.validation.constraints.Email;
 import jakarta.validation.constraints.NotBlank;
 
 public record AccountCreateDto(
 
-	@NotBlank @CleanXSS(message = "Invalid usename format") String username,
+	@NotBlank @NoXSS(message = "Invalid usename format") String username,
 
 	@NotBlank @Email @Email(message = "Invalid email format") String email,
 
@@ -15,6 +15,6 @@ public record AccountCreateDto(
 
     @Override
     public String toString() {
-	return String.format("{username=%s, email=%s, password=[PROTECTED]}", username, email);
+	return "{username=%s, email=%s, password=[PROTECTED]}".formatted(username, email);
     }
 }
